--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "d3": "^7.9.0",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "mongodb": "^6.6.2",
     "next": "14.2.3",
     "react": "^18",
